# battery-parameter-pipeline

./: .flake8  .gitignore  LICENSE.md  README.md  pyproject.toml
examples/LGMJ1/: data.ipynb  parameters.json  parameters.py
examples/liiondb/: scalar_distribution.ipynb
examples/schimpe2018/: calendar_aging.py  parameters.json  parameters.py
figures/: .gitignore
src/battery_param_pipeline/: __init__.py  pipeline.py
src/battery_param_pipeline/calculations/: __init__.py  calculation.py  capacity.py  geometric.py  ocp_balance.py
src/battery_param_pipeline/direct_entries/: __init__.py  advanced_electrolyte_model.py  direct_entry.py
src/battery_param_pipeline/latex/: __init__.py  report.py  tables.py
src/battery_param_pipeline/liiondb/: __init__.py  dfn_database.py  test.py
src/battery_param_pipeline/plots/: __init__.py  open_circuit.py  plot.ipynb
tests/: test_pipeline.py
