[project]
name = "battery_param_pipeline"
description = "Battery parameter pipeline."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
version = "0.0.0"
dependencies = [
    "matplotlib",
    "pybamm",
    "fitter",
]

[tools.setuptools]
packages = [
    { include = "battery_param_pipeline" },
]
